--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,9 @@
 axon:
   axonserver:
-    clientId: flights-cmd
+    clientId: flights-query
+spring:
+  application:
+    name: flights-query
 server:
   port: 8090
 spring:
